feat: 基本实现知识图谱的局部视图以及图数据库
This is a combination of 19 commits.

cache: 基本的图数据库设计

cache: 图数据库base部分迁移

cache: 引入单元测试

cache: 测试全部运行成功

cache: 修改baseGraphDB代码适配sqlite插件(未测试)

cache: 添加demo进行端到端测试

cache: fix: 查询节点时的格式问题

cache: 放松事务意外退出的错误处理

cache: 删除功能能用

cache: fix: 事务中不应该持久化数据

cache: 优化demo

cache: 更新测试文件中的mock

cache: 移除节点的x,y坐标

cache: feat: 添加局部视图(demo假数据示例)

cache: fix: 将 graphDBDemo关系类型的输入表单修复

cache: feat: 局部视图接入数据库

cache: fix, 只递归显示同类型的关联节点

cache: refactor: 移除VSCode扩展配置，更新图形视图设计文档，增强GraphNode模型以支持层级信息，改进GraphLayoutService以处理节点层级布局

cache: feat: 实现关系类型; 优化关系连接点

--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "android:start": "npm run remove:sql:wasm && npm run build:native && npx cap sync && npx cap copy && npx cap open android",
     "electron:install": "cd electron && npm install && cd ..",
     "electron:prepare": "npm run remove:sql:wasm && npm run build && npx cap sync @capacitor-community/electron && npx cap copy @capacitor-community/electron",
+    "electron:sync": "npx cap sync @capacitor-community/electron",
     "electron:start": "npm run electron:prepare && cd electron && npm run electron:start",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
     "lint": "eslint"
   },
   "dependencies": {
+    "@antv/x6": "^2.18.1",
+    "@antv/x6-react-shape": "^2.2.3",
     "@capacitor-community/electron": "^4.1.2",
     "@capacitor-community/sqlite": "^5.2.3",
     "@capacitor/android": "^5.3.0",
@@ -35,13 +38,17 @@
     "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^7.3.2",
     "@ionic/react-router": "^7.3.2",
+    "@types/lodash": "^4.17.16",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^10.0.0",
     "ionicons": "^7.0.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
-    "react-router-dom": "^5.3.4"
+    "react-router-dom": "^5.3.4",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@capacitor/cli": "5.3.0",
