--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 
 # production
 /build
+/dist
+/public
 
 # misc
 .DS_Store
@@ -27,3 +29,5 @@ yarn-error.log*
 
 # Optional eslint cache
 .eslintcache
+
+/graph-note/
