--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "electron:start": "npm run electron:prepare && cd electron && npm run electron:start",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "build:dev": "cross-env NODE_ENV=development vite build --mode dev"
   },
   "dependencies": {
     "@antv/x6": "^2.18.1",
@@ -60,6 +61,7 @@
     "@vitejs/plugin-legacy": "^4.1.1",
     "@vitejs/plugin-react": "^4.0.4",
     "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "cypress": "^12.7.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
