--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@antv/x6": "^2.18.1",
     "@antv/x6-react-shape": "^2.2.3",
     "@capacitor-community/electron": "^4.1.2",
-    "@capacitor-community/sqlite": "^5.2.3",
+    "@capacitor-community/sqlite": "^5.7.4",
     "@capacitor/android": "^5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.3.0",
@@ -49,6 +49,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "sql.js": "^1.12.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
